crates/fig-lexer/tests/snapshots/integration_tests__functions__pointer_parameters.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: fill
- LParen
- Ident: dst
- Colon
- Star
- Mut
- U8
- Comma
- Ident: val
- Colon
- U8
- Comma
- Ident: len
- Colon
- USize
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: copy
- LParen
- Ident: src
- Colon
- Star
- U8
- Comma
- Ident: dst
- Colon
- Star
- Mut
- U8
- Comma
- Ident: len
- Colon
- USize
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: read_byte
- LParen
- Ident: ptr
- Colon
- Star
- U8
- RParen
- Arrow
- U8
- Newline
- Indent
- Pass
- Newline
- Dedent
