crates/fig-lexer/tests/snapshots/integration_tests__functions__return_pointer.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: alloc_byte
- LParen
- RParen
- Arrow
- Star
- Mut
- U8
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: get_ptr
- LParen
- Ident: data
- Colon
- Star
- U8
- RParen
- Arrow
- Star
- U8
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: opt_ptr
- LParen
- RParen
- Arrow
- Question
- Star
- U8
- Newline
- Indent
- Pass
- Newline
- Dedent
