crates/fig-lexer/tests/snapshots/integration_tests__functions__return_slice_array.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: empty_slice
- LParen
- RParen
- Arrow
- LBracket
- U8
- RBracket
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: null_terminated
- LParen
- Ident: s
- Colon
- Star
- U8
- Comma
- Ident: len
- Colon
- USize
- RParen
- Arrow
- LBracket
- U8
- RBracket
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: fixed_buffer
- LParen
- RParen
- Arrow
- LBracket
- U8
- Semicolon
- IntegerLiteral:
    base: Decimal
    digits: "64"
    suffix: ~
- RBracket
- Newline
- Indent
- Pass
- Newline
- Dedent
